--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
                     <input type="text" required size="30">
                     <label for="Número" class="required">Número:</label>
                     <input type="text" required size="6">
+                </div>
+                <div>
                     <label for="Bairro">Bairro:</label>
+                    <input type="text">
+                    <label for="Cidade">Cidade:</label>
                     <input type="text">
                 </div>
                 <div>
-                    <label for="Cidade">Cidade:</label>
-                    <input type="text">
                     <label for="Estado">Estado:</label>
                     <input type="text">
                     <label for="CEP">CEP:</label>
